fix #111: increase spacing between numbers

--- a/src/scss/tableStyle.scss
+++ b/src/scss/tableStyle.scss
@@ -31,6 +31,7 @@
 .ferretCell {
     text-align: right;
     padding-right: 1px;
+    letter-spacing: 2px;
 }
 
 .ferretCellValue {
